examples/test/testpolicy15134.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15134
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key44: value0
      key36: value29
      key13: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value29
          key21: value23
      podSelector:
        matchLabels:
          key34: value5
          key38: value1
          key32: value35
